<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivImagen"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/texto_sexo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/texto_grupo"
        android:layout_toRightOf="@id/ivImagen"
        android:layout_toEndOf="@id/ivImagen"
        android:id="@+id/tv1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/texto_nombre"
        android:layout_toRightOf="@id/ivImagen"
        android:layout_toEndOf="@id/ivImagen"
        android:layout_below="@id/tv1"
        android:id="@+id/tv2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/texto_sexo"
        android:layout_toRightOf="@id/ivImagen"
        android:layout_toEndOf="@id/ivImagen"
        android:layout_below="@id/tv2"
        android:id="@+id/tv3" />
</RelativeLayout>